<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/full_screen_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorSecondaryVariant"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textView20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/filter_movies"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end|center_vertical"
            android:tint="@color/white"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_query"
        style="@style/editTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:hint="@string/search_query"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textView18"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_adult_results" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchAdult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_year"
        style="@style/editTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:hint="@string/enter_year_optional"
        android:inputType="date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:paddingLeft="24dp"
        android:paddingTop="8dp"
        android:paddingRight="24dp"
        android:paddingBottom="8dp"
        android:text="@string/search_movies" />

</LinearLayout>